Append to FAQ. Venue map link button. Fix: list view schedule issue on mobile due to malformed links. Refactor schedule a little bit in preparation for add to calendar.

--- a/src/pages/city-guide.module.scss
+++ b/src/pages/city-guide.module.scss
@@ -165,7 +165,8 @@
   position: relative;
   height: min(80vh, 550px);
 
-  .directions {
+  .title {
+    pointer-events: none;
     color: black;
     position: absolute;
     z-index: 1;
